# maq

./: AUTHORS  ChangeLog  INSTALL  Makefile  Makefile.am  NEWS  README  altchr.cc  assemble.cc  assemble.h  assopt.c  aux_utils.c  bfa.c  bfa.h  break_pair.c  configure.ac  csmap2ntmap.cc  dword.hh  eland2maq.cc  fasta2bfa.c  fastq2bfq.c  genran.h  get_pos.c  glfgen.cc  indel_call.cc  indel_pe.cc  indel_soa.cc  main.c  main.h  mapcheck.cc  maq.pod  maqmap_conv.c  match.cc  match.hh  match_aux.cc  merge.cc  pair_stat.cc  pileup.cc  rbcc.cc  read.cc  (+9 more)
scripts/: asub  farm-run.pl  maq.pl  maq_eval.pl  maq_plot.pl  maq_sanger.pl  paf_utils.pl  solid2fastq.pl
